--- a/ppms_project/profilingApp/templates/activities/BHW Preschooler Dashboard.html
+++ b/ppms_project/profilingApp/templates/activities/BHW Preschooler Dashboard.html
@@ -43,7 +43,7 @@
                                 <div id="dropdown-menu">
                                     <div>
                                         <i class="fa fa-lg fa-fw fa-user bi mx-auto"></i>   
-                                        <span style="font-size: 15px;"> Barangay Health Worker </span>
+                                        <span style="font-size: 15px;">{{ user.first_name }} {{ user.last_name }}</span>
                                     </div>
                                     <div>
                                         <li><hr class="dropdown-divider"></li>
