--- a/ppms_project/profilingApp/templates/activities/BHW Home.html
+++ b/ppms_project/profilingApp/templates/activities/BHW Home.html
@@ -65,7 +65,7 @@
                                 <div id="dropdown-menu">
                                     <div>
                                         <i class="fa fa-lg fa-fw fa-user bi mx-auto"></i>   
-                                        <span style="font-size: 15px;"> Barangay Health Worker </span>
+                                        <span style="font-size: 15px;">{{ bhw.user.first_name }} {{ bhw.user.last_name }}</span>
                                     </div>
                                     <div>
                                         <li><hr class="dropdown-divider"></li>
