--- a/ppms_project/profilingApp/templates/activities/login_registration.html
+++ b/ppms_project/profilingApp/templates/activities/login_registration.html
@@ -6,6 +6,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+
+
     <link rel="stylesheet" href="{% static '/CSS/styles.css' %}">
     <link rel="stylesheet" href="{% static '/CSS/font-awesome/css/all.min.css' %}">
     <link rel="stylesheet" href="{% static '/CSS/css/bootstrap.min.css' %}">
@@ -150,18 +155,36 @@
                         </div>
                         <!-- EULA -->
                         <div class="form-check">
-                            <input class="form-check-input" type="checkbox" name="flexRadioDefault" id="flexRadioDefault1">
-                            <label class="form-check-label" for="flexRadioDefault1">
-                              I accept the terms.
-                            </label>
+                            <input class="form-check-input" type="checkbox" name="flexRadioDefault" id="flexRadioDefault1" required>
+                            <button type="button" class="btn border-0" for="flexRadioDefault1" data-toggle="modal" data-target="#exampleModal">
+                                I accept the terms.
+                            </button>
                         </div>
                         <br>
-                
                         <div class="form-group">
                             <button name="register_btn" type="submit">Register</button>
                         </div>
                     </form>
                 </div>  
+            </div>
+        </div>
+        <!-- Modal -->
+        <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+            <div class="modal-dialog" role="document">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h5 class="modal-title" id="exampleModalLabel">Terms</h5>
+                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                            <span aria-hidden="true">&times;</span>
+                        </button>
+                    </div>
+                    <div class="modal-body">
+                       
+                    </div>
+                    <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                    </div>
+                </div>
             </div>
         </div>
         <!-- Spacing -->
