--- a/ppms_project/profilingApp/templates/activities/Admin Home.html
+++ b/ppms_project/profilingApp/templates/activities/Admin Home.html
@@ -108,51 +108,45 @@
             <h2 style="text-align:left;">Overall Data</h2>
             <hr>
             <!-- MAIN CARDS STARTS HERE -->
-            <div class="row d-flex display-block">
-                <div class="col-8">
-                    <div class="row">
-                        <div class="col-6">
-                            <div class="row-12 mb-3">
-                                <div class="card shadow-sm bg-white rounded">
+            <div class="row d-flex align-items-stretch ">
+                <div class="col-xxl-8 col-lg-6 col-md-12 ">
+                    <div class="row mb-3 align-items-stretch">
+                        <div class="col-xxl-3 col-sm-6 mb-2">
+                                <div class="card shadow-sm bg-white rounded h-100">
                                     <div class="card-header"><i class="fas fa-lg fa-user-check" style="color: green; position:relative; margin-right:10px;"></i>Number of Validated BHW</div>
                                     <div class="card-body">
                                         <h5 class="card-title">{{ validated_count }}</h5>
                                     </div>
                                 </div>
-                            </div>
                         </div>
-                        <div class="col-6">
-                            <div class="row-12 mb-3">
-                                <div class="card shadow-sm bg-white rounded">
+                        <div class="col-xxl-3 col-sm-6 mb-2">
+                            <div class="card shadow-sm bg-white rounded h-100">
                                     <div class="card-header"><i class="fas fa-lg fa-user" style="color: rgb(0, 0, 0); position:relative; margin-right:10px;"></i>Number of Parents</div>
                                     <div class="card-body">
                                         <h5 class="card-title">{{ parent_count }}</h5>
                                     </div>
                                 </div>
                             </div>
-                        </div>
-                    </div>
-                    <div class='row mb-3'>
-                        <div class="col-6">
-                            <div class="card shadow-sm bg-white rounded">
+                            <div class="col-xxl-3 col-sm-6 mb-2 ">
+                                <div class="card shadow-sm bg-white rounded h-100">
                                 <div class="card-header"><i class="fas fa-lg fa-user-slash" style="color:orange; position:relative; margin-right:10px;"></i>Number of Non-Validated BHW</div>
                                 <div class="card-body">
                                     <h5 class="card-title">{{ invalidated_count }}</h5>
                                 </div>
                             </div>
                         </div>
-                        <div class="col-6">
-                                <div class="card shadow-sm bg-white rounded">
+                        <div class="col-xxl-3 col-sm-6 mb-2">
+                            <div class="card shadow-sm bg-white rounded h-100">
                                     <div class="card-header"><i class="fas fa-lg fa-baby" style="color: green; position:relative; margin-right:10px;"></i>Number of Preschoolers</div>
                                     <div class="card-body">
                                         <h5 class="card-title">{{ preschooler_count }}</h5>
                                     </div>
-                                </div>
+                            </div>
+                            </div>
                         </div>
-                    </div>
-                    <div class='row'>
+                        <div class='row d-flex align-items-stretch mb-2'>
                         <div class="col-xl-12">
-                            <div class="card shadow-sm mb-3 bg-white rounded">
+                            <div class="card shadow-sm bg-white rounded h-100">
                                 <div class="card-header">
                                     <h4 style="Padding: 10px 40px 0px 0px;">Barangay Health Workers</h4>
                                 </div>
@@ -196,12 +190,12 @@
                     </div>
                     
                 </div>
-                <div class="col-4 h-100 ">
+                <div class="container-fluid col-xxl-4 col-lg-6 col-md-12 h-100 align-items-stretch ">
                     <div class="col-xl-12 mb-3">
                         <div class="card shadow-sm bg-white rounded" >  
                             <div class="card-header">
                                 <i class="fas fa-lg fa-chart-pie" style="color:orange; position:relative; margin-right:10px;"></i>Overview Chart</div>
-                            <div class="card-body">
+                            <div class="card-body p-md-4">
                                 <canvas class="chart-view" id="myPieChart" width="470" height="550" style="display: block; box-sizing: border-box;"></canvas>  
                             </div>
                         </div>
@@ -216,7 +210,7 @@
 <!-- Form-->
 
     <!-- Footer -->
-<div class="footer">
+<div class="footer text-muted">
   <div class="container">
       <div class="row text-center align-items-center">
               <div class="border-top p-4">
