login card resizing :)

--- a/ppms_project/profilingApp/templates/activities/login_registration.html
+++ b/ppms_project/profilingApp/templates/activities/login_registration.html
@@ -37,7 +37,7 @@
     <!-- Form -->
     <div class="container-fluid" id="homeBody">
         <br>
-        <div class="form">
+        <div class="form" id="formHeight">
             <div class="form-toggle"></div>
             <div class="form-panel one">
                 <div class="form-header">
