--- a/ppms_project/profilingApp/templates/activities/BHW Immunization Schedule.html
+++ b/ppms_project/profilingApp/templates/activities/BHW Immunization Schedule.html
@@ -16,44 +16,11 @@
                 <div id="navLinks">
                     <ul class="nav text-small">
                         <li>
-                            <a href="{% url 'bhw_home' %}" class="nav-link" data-toggle="tooltip" data-bs-placement="bottom" data-bs-offset="0,7" 
-                            title="Barangay Health Worker Home">
-                            <i class="fa fa-fw fa-home" style="font-size: 24px;"></i>   
+                            <a href="{% url 'preschooler_dashboard' %}"  style="border-radius: 13%;"class="nav-link" data-toggle="tooltip" data-bs-placement="bottom" data-bs-offset="0,7" 
+                            title="Go back to Preschooler Dashboard">
+                            <i class="fa fa-lg fa-fw fa-chevron-circle-left" style="font-size: 24px;"></i>    
+                            <span style="color:rgb(3, 3, 3);">Back</span>   
                             </a>
-                        </li>
-                        <li>
-                            <a href="{% url 'preschooler_dashboard' %}" class="nav-link" data-toggle="tooltip" data-bs-placement="bottom" data-bs-offset="0,7"
-                            title="Preschooler Profile">
-                            <i class="fa fa-fw fa-id-card " style="font-size: 24px;"></i>
-                            </a>
-                        </li>
-                        <li>
-                            <a href="{% url 'immunization_schedule' %}" class="nav-link" style="color:rgb(27, 177, 92) !important;" data-toggle="tooltip" data-bs-placement="bottom" data-bs-offset="0,7"
-                            title="Immunization Schedule" >
-                            <i class="fa fa-fw fa-calendar-alt" style="font-size: 24px;"></i>
-                            </a>
-                        </li>
-                        <li>
-                            <a class="btn nav-link" id="dropdownUser1" data-bs-toggle="dropdown" data-toggle="tooltip" data-bs-placement="bottom" data-bs-offset="0,7"
-                            title="User Settings" aria-expanded="false">
-                                <i class="fa fa-fw fa-user-cog bi" style="font-size: 24px;"></i>
-                                <span class="position-absolute top-100 start-75 translate-middle badge rounded-pill text-dark" style="border-radius: 50%;">
-                                    <i class="fa fa-lg fa-fw fa-caret-down bg-light" style="border-radius: 25%; margin-bottom: 15px;"></i>
-                                </span></a>
-                                
-                            </a>
-                            <ul class="dropdown-menu dropdown-menu-end p-2" aria-labelledby="dropdownUser1">
-                                <div id="dropdown-menu">
-                                    <div>
-                                        <i class="fa fa-lg fa-fw fa-user bi mx-auto"></i>   
-                                        <span style="font-size: 15px;">{{ user.first_name }} {{ user.last_name }}</span>
-                                    </div>
-                                    <div>
-                                        <li><hr class="dropdown-divider"></li>
-                                        <li><a class="dropdown-item" href="{% url 'logout' %}"><i class="fa fa-fw fa-sign-out-alt mx-1"></i>Sign out</a></li>
-                                    </div>
-                                </div>
-                            </ul>                    
                         </li>
                     </ul>
                 </div>
@@ -77,7 +44,7 @@
         <div class="">
             <div class="row"> 
                 <div class="col">
-                    <h3 style="text-align:left;">Immunization</h3>
+                    <h3 style="text-align:left;">Preschoolers Immunization</h3>
                 </div>
             </div>
         <hr>
@@ -89,26 +56,60 @@
         <div class="row">
             <div class="col">
                 <div class="card-header">
-                    <h3> Preschoolers</h3>
-
+                    <h3> Immunization Schedule</h3>
                 </div>
                 <div class="card shadow-lg p-3 bg-white rounded" >
                     <div class="table-responsive">
                         <table class="table table-hover table-cell-border" id="table_validation">
+                            <div class="" style="text-align: right !important; ">
+                                <button style="background-color: #188045; color: white;" type="button" class="btn" data-bs-toggle="modal" data-bs-target="#update"><span class="fas fa-calendar-edit"></span> Immunization Update</button>
+                            </div>
+                            <div class="modal fade" id="update" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                                <div class="modal-dialog modal-dialog-centered modal-lg">
+                                    <div class="modal-content">
+                                        <div class="modal-header text-center">
+                                            <h5 class="modal-title fas fa-calendar-edit" id="exampleModalLabel"> Immunization Update</h5>
+                                            
+                                        </div>
+                                        <div class="modal-body mx-4">
+                                            <form method="POST">
+                                            <!-- <form method="POST" onsubmit="get_cred($('#type').val());"> -->
+                                                <div class="md-form">
+                                                    <label id="user-lbl" data-error="wrong" data-success="right">Vaccine: </label>
+                                                </div>
+                                                <div class="md-form">
+                                                    <label id="user-lbl" data-error="wrong" data-success="right">Doses:</label>
+                                                </div>
+                                                <div class="md-form">
+                                                    <label id="user-lbl" data-error="wrong" data-success="right">Required Doses:</label>
+                                                </div>
+                                                <div class="md-form">
+                                                    <label id="user-lbl" data-error="wrong" data-success="right">Immunization Date:</label>
+                                                </div>
+                                                <div class="md-form">
+                                                    <label id="user-lbl" data-error="wrong" data-success="right">Remarks:</label>
+                                                </div>
+                                                <div class="modal-footer">
+                                                    <button type="submit" class="btn " style="background-color: #188045; color: white;">Save</button>
+                                                    <button type="button" class="btn" style="background-color: #EF3A25; color: white;" data-bs-dismiss="modal" aria-label="Close"> Cancel</button>
+                                                </div>
+                                            </form>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <br>
                             <thead>
                                 <tr>
                                     <th scope="col" class="text-center">No.</th>
-                                    <th scope="col" class="text-center">First Name</th>
-                                    <th scope="col" class="text-center">Middle Name</th>
-                                    <th scope="col" class="text-center">Last Name</th>
-                                    <th scope="col" class="text-center">Suffix</th>
-                                    <th scope="col" class="text-center">Age in months</th>
-                                    <th scope="col" class="text-center">Barangay Designation</th>
-                                    <th scope="col" class="nosort text-center">Action</th>
+                                    <th scope="col" class="text-center">Vaccine</th>
+                                    <th scope="col" class="text-center">Doses</th>
+                                    <th scope="col" class="text-center">Required Doses</th>
+                                    <th scope="col" class="text-center">Immunization Date</th>
+                                    <th scope="col" class="text-center">Remarks</th>
                                 </tr>
                             </thead>
                             <tbody>
-                                
                                 <tr>
                                     <td class="text-center"></td>
                                     <td class="text-center"></td>
@@ -116,12 +117,7 @@
                                     <td class="text-center"></td>
                                     <td class="text-center"></td>
                                     <td class="text-center"></td>
-                                    <td class="text-center"></td>
-                                    <td style="text-align: center;">
-                                        
-                                    </td>
                                 </tr>
-                                
                             </tbody>
                         </table>
                     </div>
@@ -129,27 +125,5 @@
             </div>
         </div>
     </div>
-
-        <script src="https://cdn.datatables.net/1.12.1/js/jquery.dataTables.min.js"></script>
-        <script src="https://cdn.datatables.net/1.12.1/js/dataTables.bootstrap4.min.js"></script>
-            
-        <script>
-            var t = $('#table_validation').DataTable({
-                info: 'true',
-                aoColumnDefs: [{
-                    'bSortable': false,
-                    'aTargets': ['nosort'],
-                    'orderable': false,
-                    'targets': [0,7],
-                }],
-                order: [[1, 'asc']],
-                });
-                t.on('order.dt search.dt', function () {
-                let i = 1;
-                t.cells(null, 0, { search: 'applied', order: 'applied' }).every(function (cell) {
-                    this.data(i++);
-                });}).draw();
-        </script>
-
 </div>
 {% endblock %}
