--- a/ppms_project/profilingApp/templates/activities/Preschooler Profile.html
+++ b/ppms_project/profilingApp/templates/activities/Preschooler Profile.html
@@ -54,7 +54,7 @@
         <div>
             <section>
                 <div class="row">
-                    <div class="col-md-6 col-12 mb-4 mb-md-3">
+                    <div class="col-md-5 col-12 mb-4 mb-md-3">
                         <div class="card">
                             <div class="card-header">
                                 <h4 class=" mx-1 my-1">Preschooler Details</h4>
@@ -105,6 +105,15 @@
                                 <hr>
                                 <div class="row">
                                     <div class="col-sm justify-content-start justify-content-md-center">
+                                        <p class="mb-0">Health Problem</p>
+                                    </div>
+                                    <div class="col-sm justify-content-start justify-content-md-center">
+                                        <p class="text-muted mb-0">{{ preschooler.health_problem }}</p>
+                                    </div>
+                                </div>
+                                <hr>
+                                <div class="row">
+                                    <div class="col-sm justify-content-start justify-content-md-center">
                                         <p class="mb-0">Weight:</p>
                                     </div>
                                     {% if preschooler.weight is None%}
@@ -131,6 +140,46 @@
                                     {% endif %}
                                 </div>
                                 <hr>
+                                <div class="" style="text-align: center !important; ">
+                                    <button style="background-color: #188045; color: white;" type="button" class="btn" data-bs-toggle="modal" data-bs-target="#update"><span class="fa fa-user-edit"></span> Update preschooler</button>
+                                    <a href="{% url 'immunization_schedule' %}"><button style="background-color: #188045; color: white;" type="button" class="btn"><span class="fa fa-address-card"></span> Immunization Status</button></a>
+                                </div>
+                                <div class="modal fade" id="update" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                                    <div class="modal-dialog modal-dialog-centered modal-lg">
+                                        <div class="modal-content">
+                                            <div class="modal-header text-center">
+                                                <h5 class="modal-title fa fa-user-edit" id="exampleModalLabel"> Preschooler Update</h5>
+                                                
+                                            </div>
+                                            <div class="modal-body mx-4">
+                                                <form method="POST">
+                                                <!-- <form method="POST" onsubmit="get_cred($('#type').val());"> -->
+                                                    {% csrf_token %}
+                                                    <div class="md-form">
+                                                        <label id="user-lbl" data-error="wrong" data-success="right">Height (cm): </label>
+                                                        {{ form.height }}
+                                                    </div>
+                                                    <div class="md-form">
+                                                        <label id="user-lbl" data-error="wrong" data-success="right">Weight (kg):</label>
+                                                        {{ form.weight }}
+                                                    </div>
+                                                    <div class="md-form">
+                                                        <label id="user-lbl" data-error="wrong" data-success="right">Date Measured:</label>
+                                                        {{ form.date_measured }}
+                                                    </div>
+                                                    <div class="md-form">
+                                                        <label id="user-lbl" data-error="wrong" data-success="right">Health Problem/s:</label>
+                                                        {{ form.health_problem }}
+                                                    </div>
+                                                    <div class="modal-footer">
+                                                        <button type="submit" class="btn " style="background-color: #188045; color: white;">Save</button>
+                                                        <button type="button" class="btn" style="background-color: #EF3A25; color: white;" data-bs-dismiss="modal" aria-label="Close"> Cancel</button>
+                                                    </div>
+                                                </form>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
                             </div>
                             <div class="card-footer small text-muted">
                                 Last Updated : {{ preschooler.date_measured }} 
@@ -138,7 +187,7 @@
                         </div>
                     </div>
                     
-                    <div class="col-md-6 col-12 text-center h-100 mb-3 ">
+                    <div class="col-md-7 col-12 text-center h-100 mb-3 ">
                         
                         <h5 class="text-start mx-3 mb-3">Nutritional Status Legends:</h5>
                         <div class="col align-self-stretch h-100 mx-3">
@@ -164,7 +213,6 @@
                             </div>
                         </div>
                         <!-- <i class="fas fa-square" style="color: rgb(0,0,0);"> -Obese</i> -->
-                        <hr>
                         <div class="card-group my-2 mx-3">
                             <div class="card">
                                 <div class="card-header">
@@ -246,65 +294,21 @@
                                 {% endif %}
                                 </div>
                             </div>
-                            <br>
-                            <br>
-                            <br>
-                            <br>
-                            <div class="text-align: center;">
-                                <button style="background-color: #188045; color: white;" type="button" class="btn" data-bs-toggle="modal" data-bs-target="#update"><span class="fa fa-calendar-alt"></span> Update preschooler</button>
-                            </div>
-                            <div class="modal fade" id="update" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-                                <div class="modal-dialog modal-dialog-centered modal-lg">
-                                    <div class="modal-content">
-                                        <div class="modal-header text-center">
-                                            <h5 class="modal-title fa fa-user-edit" id="exampleModalLabel"> Preschooler Update</h5>
-                                            
+                            <div class="row">
+                                <div class="col">
+                                    <div class="card">
+                                        <div class="card-header">
+                                            Nutritional Status History
                                         </div>
-                                        <div class="modal-body mx-4">
-                                            <form method="POST">
-                                            <!-- <form method="POST" onsubmit="get_cred($('#type').val());"> -->
-                                                {% csrf_token %}
-                                                <div class="md-form">
-                                                    <label id="user-lbl" data-error="wrong" data-success="right">Height (cm): </label>
-                                                    {{ form.height }}
-                                                </div>
-                                                <div class="md-form">
-                                                    <label id="user-lbl" data-error="wrong" data-success="right">Weight (kg):</label>
-                                                    {{ form.weight }}
-                                                </div>
-                                                <div class="md-form">
-                                                    <label id="user-lbl" data-error="wrong" data-success="right">Date Measured:</label>
-                                                    {{ form.date_measured }}
-                                                </div>
-                                                <div class="md-form">
-                                                    <label id="user-lbl" data-error="wrong" data-success="right">Health Problem/s:</label>
-                                                    {{ form.health_problem }}
-                                                </div>
-                                                <div class="modal-footer">
-                                                    <button type="submit" class="btn " style="background-color: #188045; color: white;">Save</button>
-                                                    <button type="button" class="btn" style="background-color: #EF3A25; color: white;" data-bs-dismiss="modal" aria-label="Close"> Cancel</button>
-                                                </div>
-                                            </form>
+            
+                                        <div class="card-body">
+                                            <canvas id="myChart" width="100%" height="30"></canvas>
+                                        </div>
+                                        <div class="card-footer small text-muted">
+                                            Updated yesterday at 11:59 PM
                                         </div>
                                     </div>
                                 </div>
-                            </div>
-                        </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col">
-                        <div class="card">
-                            <div class="card-header">
-                                Nutritional Status History
-                            </div>
-
-                            <div class="card-body">
-                                <canvas id="myChart" width="100%" height="30"></canvas>
-                            </div>
-                            <div class="card-footer small text-muted">
-                                Updated yesterday at 11:59 PM
                             </div>
                         </div>
                     </div>
@@ -320,14 +324,6 @@
     'February',
     'March',
     'April',
-    'May',
-    'June',
-    'July',
-    'August',
-    'September',
-    'October',
-    'November',
-    'December',
   ];
 
   const data = {
@@ -336,7 +332,7 @@
       label: 'Preschooler BMI Status',
       backgroundColor: 'rgb(255, 99, 132)',
       borderColor: 'rgb(255, 99, 132)',
-      data: [0, 10, 5, 2, 20, 30, 45],
+      data: [0, 10, 5, 2, 20,],
     }]
   };
 
