--- a/ppms_project/profilingApp/templates/activities/BHW Immunization Schedule.html
+++ b/ppms_project/profilingApp/templates/activities/BHW Immunization Schedule.html
@@ -80,18 +80,18 @@
                                                     <select class="form-select" name="vax_name" aria-label="Default select example">
                                                         <option value="BCG">BCG</option>
                                                         <option value="Hepatitis B">Hepatitis B</option>
-                                                        <option value="Oral Poliovirus Vaccine">Oral Poliovirus Vaccine</option>
-                                                        <option value="Pentavalent Vaccine">Pentavalent Vaccine</option>
-                                                        <option value="Measles Containing Vaccines">Measles Containing Vaccines</option>
-                                                        <option value="Tetanus Toxoid">Tetanus Toxoid</option>
-                                                        <option value="Inactivated Polio Vaccine">Inactivated Polio Vaccine</option>
-                                                        <option value="Vax8">Vax8</option>
+                                                        <option disabled value="Oral Poliovirus Vaccine">Oral Poliovirus Vaccine</option>
+                                                        <option disabled value="Pentavalent Vaccine">Pentavalent Vaccine</option>
+                                                        <option disabled value="Measles Containing Vaccines">Measles Containing Vaccines</option>
+                                                        <option disabled value="Tetanus Toxoid">Tetanus Toxoid</option>
+                                                        <option disabled value="Inactivated Polio Vaccine">Inactivated Polio Vaccine</option>
+                                                        <option disabled value="Measles Mumps - Rubella">Measles Mumps - Rubella</option>
                                                     </select>
                                                 </div>
-                                                <!-- <div class="md-form">
+                                                <div class="md-form">
                                                     <label id="user-lbl" data-error="wrong" data-success="right">Doses:</label>
                                                     <input class="form-control" type="number" name="dose" id="dose">
-                                                </div> -->
+                                                </div>
                                                 <!-- <div class="md-form">
                                                     <label id="user-lbl" data-error="wrong" data-success="right">Required Doses:</label>
                                                 </div> -->
@@ -123,8 +123,8 @@
                                     <th scope="col" class="text-center">Remarks</th>
                                 </tr>
                             </thead>
+                            {% for vaccine in vaccines %}
                             <tbody>
-                                {% for vaccine in vaccines %}
                                 <tr>
                                     <td class="text-center"></td>
                                     <td class="text-center">{{ vaccine.vax_name }}</td>
@@ -133,8 +133,8 @@
                                     <td class="text-center">{{ vaccine.vax_date }}</td>
                                     <td class="text-center">{{ vaccine.vax_remarks }}</td>
                                 </tr>
-                                {% endfor %}
                             </tbody>
+                            {% endfor %}
                         </table>
                     </div>
                 </div>
